update styles effects portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ button, input, select {
     line-height: 25px; }
 
 .tittle {
-  font-size: 2rem; }
+  font-size: 1.5rem; }
   .tittle h1 {
     text-transform: uppercase;
     color: #fff;
@@ -285,7 +285,7 @@ header {
       -ms-flex-align: center;
           align-items: center;
   width: 35px;
-  margin-left: 20px;
+  margin-left: 10px;
   background-color: transparent;
   height: 30px; }
   .btn-nav i {
@@ -746,13 +746,14 @@ header {
   padding: 50px 10px 0 10px; }
   @media (min-width: 48em) {
     .common_sec {
-      max-width: 90%;
-      padding: 0; }
+      margin: 0 auto;
+      padding: 0 2rem; }
       .common_sec p {
         margin-bottom: 10px; } }
   @media (min-width: 75em) {
     .common_sec {
-      max-width: 1000px; } }
+      max-width: 1000px;
+      padding: 0 0; } }
 
 /* Header Canvas*/
 .large-header {
@@ -841,6 +842,73 @@ header {
         text-transform: capitalize; }
       .list_cnt_contact li input:focus, .list_cnt_contact li textarea:focus {
         border-bottom: 2px solid #fd0049; }
+
+@media (min-width: 75em) {
+  .portfolio_site {
+    max-width: 80%; } }
+
+.grid_portfolio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-x: hidden;
+  padding: 10px 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  @media (min-width: 48em) {
+    .grid_portfolio {
+      padding: 4rem 0;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
+  @media (min-width: 75em) {
+    .grid_portfolio li {
+      width: 48%; } }
+  .grid_portfolio li {
+    margin-bottom: 1rem;
+    overflow: hidden; }
+    .grid_portfolio li img {
+      width: 100%;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease;
+      max-height: 350px; }
+    .grid_portfolio li a {
+      display: block;
+      position: relative; }
+      .grid_portfolio li a > span {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        position: absolute;
+        left: 0;
+        letter-spacing: 0.5rem;
+        color: #fd0049;
+        top: 0;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        background-color: rgba(37, 38, 39, 0.9);
+        width: 100%;
+        opacity: 0;
+        -webkit-transform: rotateX(-180deg);
+                transform: rotateX(-180deg);
+        height: 100%;
+        -webkit-transition: all 0.5s ease;
+        transition: all 0.5s ease; }
+        .grid_portfolio li a > span h4 {
+          font-weight: bold; }
+    .grid_portfolio li:hover img {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2); }
+    .grid_portfolio li:hover span {
+      opacity: 1;
+      -webkit-transform: rotateX(0);
+              transform: rotateX(0); }
 
 @font-face {
   font-family: "untitled-font-3";
