--- a/css/style.css
+++ b/css/style.css
@@ -465,15 +465,15 @@ header {
 .description_about p {
   line-height: 1.5rem; }
 
-.fadeInLeft {
-  -webkit-animation-name: fadeInLeft;
-          animation-name: fadeInLeft;
+.fadeInLeftBounce {
+  -webkit-animation-name: fadeInLeftBounce;
+          animation-name: fadeInLeftBounce;
   -webkit-animation-duration: 1.5s;
           animation-duration: 1.5s;
   -webkit-animation-fill-mode: backwards;
           animation-fill-mode: backwards; }
 
-@-webkit-keyframes fadeInLeft {
+@-webkit-keyframes fadeInLeftBounce {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-100%);
@@ -494,7 +494,7 @@ header {
     -webkit-transform: translateX(0);
             transform: translateX(0); } }
 
-@keyframes fadeInLeft {
+@keyframes fadeInLeftBounce {
   0% {
     opacity: 0;
     -webkit-transform: translateX(-100%);
@@ -510,6 +510,38 @@ header {
     -webkit-transform: translateX(5px);
             transform: translateX(5px); }
   20%, 50%, 80%, 100% {
+    opacity: 1;
+    z-index: 100;
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards; }
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1; }
+  100% {
+    opacity: 1;
+    z-index: 100;
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1; }
+  100% {
     opacity: 1;
     z-index: 100;
     -webkit-transform: translateX(0);
