--- a/maps/src/css/recursos/general.scss
+++ b/maps/src/css/recursos/general.scss
@@ -29,11 +29,20 @@ p{
     border-radius:3px 3px 3px 3px;
     padding:10px 10px;
 }
-#demo-canvas{
-    position:fixed;
-    z-index: 200;
-}
 .hidde_sec{
     position: relative;
     z-index: 300;
+}
+/* ---- particles.js container ---- */
+#stats{
+    display: none !important;
+}
+#particles-js{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-image: url('');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
