--- a/maps/src/css/recursos/home.scss
+++ b/maps/src/css/recursos/home.scss
@@ -108,12 +108,12 @@ to { border-color: $colorweb; }
         line-height: 1.5rem;
     }
 }
-.fadeInLeft{
-    animation-name:fadeInLeft;
+.fadeInLeftBounce{
+    animation-name:fadeInLeftBounce;
     animation-duration:1.5s;
     animation-fill-mode: backwards; 
 }
-@keyframes fadeInLeft {
+@keyframes fadeInLeftBounce {
     0% {
         opacity: 0;
         transform: translateX(-100%);
@@ -129,6 +129,23 @@ to { border-color: $colorweb; }
         transform:translateX(5px);
     }
     20%,50%,80%,100% {
+        opacity: 1;
+        z-index:100;
+        transform: translateX(0);
+    }
+}
+.fadeInLeft{
+    animation-name:fadeInLeft;
+    animation-duration:1.5s;
+    animation-fill-mode: backwards; 
+}
+@keyframes fadeInLeft{
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+        z-index:-1;
+    }
+    100% {
         opacity: 1;
         z-index:100;
         transform: translateX(0);
@@ -345,6 +362,7 @@ to { border-color: $colorweb; }
 }
 /* Header Canvas*/
 .large-header {
+    min-height: 100vh;
 	position: relative;
 	width: 100%;
 	overflow: hidden;
@@ -435,6 +453,7 @@ to { border-color: $colorweb; }
 }
 .grid_portfolio{
     display: flex;
+    background: transparent;
     overflow-x:hidden;
     padding:10px 0;
     flex-wrap:wrap;
