update style header color

--- a/maps/src/css/recursos/header-styles.scss
+++ b/maps/src/css/recursos/header-styles.scss
@@ -108,6 +108,7 @@
 header{
     position: fixed;
     height: 50px;
+    background-color:rgba(37, 38, 39, 0.9);
     transition:all 0.5s ease;
     top: 0;     
     left: 0;
