--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ button, input, select {
 header {
   position: fixed;
   height: 50px;
+  background-color: rgba(37, 38, 39, 0.9);
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   top: 0;
