--- a/css/style.css
+++ b/css/style.css
@@ -592,6 +592,54 @@ header {
     -webkit-transform: translateY(0);
             transform: translateY(0); } }
 
+.fadeInBottom {
+  -webkit-animation-name: fadeInBottom;
+          animation-name: fadeInBottom;
+  -webkit-animation-duration: 1.7s;
+          animation-duration: 1.7s; }
+
+@-webkit-keyframes fadeInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    z-index: -1; }
+  40% {
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px); }
+  60% {
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px); }
+  90% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px); }
+  20%, 50%, 80%, 100% {
+    opacity: 1;
+    z-index: 100;
+    -webkit-transform: translateY(0);
+            transform: translateY(0); } }
+
+@keyframes fadeInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    z-index: -1; }
+  40% {
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px); }
+  60% {
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px); }
+  90% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px); }
+  20%, 50%, 80%, 100% {
+    opacity: 1;
+    z-index: 100;
+    -webkit-transform: translateY(0);
+            transform: translateY(0); } }
+
 .fadeInRight {
   -webkit-animation-name: fadeInRight;
           animation-name: fadeInRight;
