--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ button, input, select {
 header {
   position: fixed;
   height: 50px;
-  background-color: rgba(37, 38, 39, 0.9);
+  background-color: transparent;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   top: 0;
@@ -267,7 +267,8 @@ header {
   @media (min-width: 48em) {
     header {
       height: 100%;
-      width: 80px; } }
+      width: 80px;
+      background-color: rgba(37, 38, 39, 0.9); } }
 
 .btn-nav {
   cursor: pointer;
@@ -899,21 +900,34 @@ header {
 
 .contact_bloq > h4 {
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 3rem;
+  margin-bottom: 2.5rem;
   font-weight: bold;
   text-align: center; }
 
 .list_cnt_contact {
   margin-top: 20px; }
   .list_cnt_contact li {
+    position: relative;
     color: red; }
+    .list_cnt_contact li span {
+      display: block;
+      content: '';
+      -webkit-transition: all 0.2s ease;
+      transition: all 0.2s ease;
+      width: 0;
+      position: absolute;
+      bottom: 15px;
+      left: 0;
+      height: 2px;
+      background-color: #fd0049; }
     .list_cnt_contact li input, .list_cnt_contact li textarea {
       resize: none;
       width: 100%;
       border: none;
       margin-bottom: 15px;
       padding: 10px 10px;
-      border-bottom: 2px solid grey;
+      position: relative;
       -webkit-transition: all 0.25s ease;
       transition: all 0.25s ease;
       font-size: 1.5rem; }
@@ -923,10 +937,12 @@ header {
         text-transform: capitalize; }
       .list_cnt_contact li input::placeholder, .list_cnt_contact li textarea::placeholder {
         text-transform: capitalize; }
-      .list_cnt_contact li input:focus, .list_cnt_contact li textarea:focus {
-        border-bottom: 2px solid #fd0049; }
+      .list_cnt_contact li input:focus ~ span, .list_cnt_contact li textarea:focus ~ span {
+        width: 100%; }
     .list_cnt_contact li textarea {
       height: 8rem; }
+  .list_cnt_contact .cnt_textarea span {
+    bottom: 18px; }
 
 @media (min-width: 75em) {
   .portfolio_site {
