fix list portfolio height

--- a/maps/src/css/recursos/header-styles.scss
+++ b/maps/src/css/recursos/header-styles.scss
@@ -1,10 +1,7 @@
 .content_me{
     padding:0 10px;
-    position: absolute;
-    max-width:700px;
-    left: 0;        
+    max-width:700px;       
     margin: 0 auto;
-    right: 0;
     text-align: center;
     >p{
         margin-top: 15px;
@@ -13,7 +10,7 @@
     }
 }
 .tittle{
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     h1{
         text-transform: uppercase;
         color:#fff;
@@ -44,13 +41,13 @@
     position: fixed;
     top:-100%;
     left: 0;
-    transition:all 0.70s ease;
+    transition:all 0.35s ease;
     width: 100%;
     opacity: 0;
     z-index: 500;
     right: 0;
     height: 0;
-    >ul{
+    .list_navigator{
         height: 100%;
         background-color:rgba(37, 38, 39, 0.9);
         display: flex;
@@ -63,7 +60,8 @@
             width: 100%;
             a{
                 color:#fff;
-                height: 4rem;
+                height: 5rem;
+                letter-spacing: 0.2rem;
                 width: 100%;
                 font-size: 2rem;
                 display: flex;
@@ -75,11 +73,6 @@
                 background-color: #FFF;
                 a{
                     color:$colorweb;
-                }
-            }
-            @include bp(tablet){
-                a{
-                    font-size: 25px;
                 }
             }
         }
@@ -95,7 +88,7 @@
     height: 100%;
     opacity:1;
     top: 0;
-    z-index: 500;
+    z-index: 400;
     @include bp(tablet){
         left:80px;
         width: calc(100% - 80px);
@@ -105,10 +98,10 @@
     opacity:1;
     background-color: $colorbg;
 }
-header{
+.header_container{
     position: fixed;
     height: 50px;
-    background-color:rgba(37, 38, 39, 0.9);
+    background-color:transparent;
     transition:all 0.5s ease;
     top: 0;     
     left: 0;
@@ -118,6 +111,7 @@ header{
     @include bp(tablet){
         height: 100%;
         width: 80px;
+        background-color: rgba(37, 38, 39, 0.9);
     }
 }
 .btn-nav{
